@@ -1,10 +1,13 @@
-# $Id: Changes,v 1.33 2003/07/22 04:22:00 petdance Exp $
+# $Id: Changes,v 1.34 2003/07/22 14:50:52 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.55
 	[ENHANCEMENTS]
 	* Added WWW::Mechanize::Link object to encapsulate what
-	  used to be an array reference of stuff.
+	  used to be an array reference of stuff from find_link().
+
+	* The WWW::Mechanize::Link object now tracks what tag the link
+	  came from (<A>, <FRAME> or <IFRAME>).
 
 0.54	July 20, 2003  12:47am
 	[THINGS THAT MIGHT BREAK YOUR CODE]
